fix overflow issue on mobile layout;

--- a/frontend/src/app/components/layout/page-frame/page-frame.component.scss
+++ b/frontend/src/app/components/layout/page-frame/page-frame.component.scss
@@ -27,7 +27,7 @@
 @media(max-width: $breakpoint-tablet-width){
   .content-container{
     width: 100vw;
-    margin-top: 56px;
+    padding-top: 56px;
 
     padding-left: 18px;
     padding-right: 18px;
